<resources>
    <string name="app_name">Code-Cpp</string>
    <string name="code_cpp">CODE-CPP</string>
    <string name="todo">TODO</string>
    <string name="getting_started">Getting Started</string>
    <string name="core_topics">Core Topics</string>
    <string name="advance_c">Advance C++</string>
    <string name="competitive_coding">Competitive Coding</string>
    <string name="c_editor">C++ Editor</string>
    <string name="resources_used">Resources Used</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="why_c">Why c++</string>
    <string name="environment_setup">Environment Setup</string>
    <string name="upper">C++ is a MUST for students and working professionals to become a great Software Engineer. I will list down some of the key advantages of learning C++:</string>
    <string name="lower">\n1) C++ is very close to hardware, so you get a chance to work at a low level which gives you lot of control in terms of memory management, better performance and finally a robust software development.\n\n2) C++ programming gives you a clear understanding about Object Oriented Programming. You will understand low level implementation of polymorphism when you will implement virtual tables and virtual table pointers, or dynamic type identification.\n\n3) C++ is one of the every green programming languages and loved by millions of software developers. If you are a great C++ programmer then you will never sit without work and more importantly you will get highly paid for your work.\n\n4) C++ is the most widely used programming languages in application and system programming. So you can choose your area of interest of software development.\n\n5) C++ really teaches you the difference between compiler, linker and loader, different data types, storage classes, variable types their scopes etc.\n\nThere are 1000s of good reasons to learn C++ Programming. But one thing for sure, to learn any programming language, not only C++, you just need to code, and code and finally code until you become expert.</string>
    <string name="write_your_code_here">//Write your code here</string>
    <string name="basics">Basics</string>
    <string name="object_oriented">Object Oriented</string>
    <string name="prev_topic">Prev Topic</string>
    <string name="next_topic">Next Topic</string>
    <string name="homepage">Homepage</string>
    <string name="close_app">Close App</string>
    <string name="creator_mohammad_atif">Creator- Mohammad Atif</string>
    <string name="about">About</string>
    <string name="aboutstring">Hello !! My name is Mohammad Atif. Pursuing my Btech in I.T from G.L Bajaj Noida. I love to create android applications and stuffs. This app is only for test purpose.</string>
    <string name="todosecond">TODO</string>
    <string name="todothird">TODO</string>
    <string name="todofourth">TODO</string>
    <string name="askquestions">Ask your questions</string>
    <string name="write_here">Write here</string>
    <string name="welcome">Welcome</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="namesign">Name</string>
    <string name="current_position">Current Position</string>
    <string name="emailsup">Email</string>
    <string name="passwordsup">Password</string>
    <string name="sign_upbtn">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string-array name="currentpos">
        <item>Select Your Designation</item>
        <item>Class 6</item>
        <item>Class 7</item>
        <item>Class 8</item>
        <item>Class 9</item>
        <item>Class 10</item>
        <item>Class 11</item>
        <item>Class 12</item>
        <item>B.tech 1,2 year</item>
        <item>B.tech 3,4 year</item>
        <item>other</item>
    </string-array>
</resources>
