<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF6F6"
    tools:context=".main_menu">

    <TextView
        android:id="@+id/Code_cpp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/code_cpp"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/cpp_icon"
        android:layout_width="65dp"
        android:layout_height="63dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/Code_cpp_text"
        app:layout_constraintEnd_toStartOf="@+id/Code_cpp_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Code_cpp_text"
        app:srcCompat="@drawable/cpp" />

    <Button
        android:id="@+id/getting_started_btn"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/getting_started"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Code_cpp_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/core_topics_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/core_topics"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/getting_started_btn"
        app:layout_constraintStart_toStartOf="@+id/getting_started_btn"
        app:layout_constraintTop_toBottomOf="@+id/getting_started_btn" />

    <Button
        android:id="@+id/advance_topics_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/advance_c"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/core_topics_btn"
        app:layout_constraintStart_toStartOf="@+id/core_topics_btn"
        app:layout_constraintTop_toBottomOf="@+id/core_topics_btn" />

    <Button
        android:id="@+id/comp_coding_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/competitive_coding"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/advance_topics_btn"
        app:layout_constraintStart_toStartOf="@+id/advance_topics_btn"
        app:layout_constraintTop_toBottomOf="@+id/advance_topics_btn" />

    <Button
        android:id="@+id/ide_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/c_editor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/comp_coding_btn"
        app:layout_constraintStart_toStartOf="@+id/comp_coding_btn"
        app:layout_constraintTop_toBottomOf="@+id/comp_coding_btn" />

    <Button
        android:id="@+id/resources_used_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/resources_used"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ide_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ide_btn"
        app:layout_constraintTop_toBottomOf="@+id/ide_btn"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>