<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2ebf2"
    tools:context="com.example.Code_Cpp.signupactivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/cpp" />

    <EditText
        android:id="@+id/sup_nametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/positiontxt"
        app:layout_constraintEnd_toEndOf="@+id/Yournametxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Yournametxt"
        app:layout_constraintTop_toBottomOf="@+id/Yournametxt"
        app:layout_constraintVertical_bias="0.563" />

    <TextView
        android:id="@+id/Yournametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/namesign"
        android:textColor="#020000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sup_nametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/positiontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/current_position"
        android:textColor="#020000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spdesgination"
        app:layout_constraintEnd_toEndOf="@+id/sup_nametxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sup_nametxt"
        app:layout_constraintTop_toBottomOf="@+id/sup_nametxt" />

    <Spinner
        android:id="@+id/spdesgination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/currentpos"
        app:layout_constraintBottom_toTopOf="@+id/Emailsignuptxtview"
        app:layout_constraintEnd_toEndOf="@+id/positiontxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/positiontxt"
        app:layout_constraintTop_toBottomOf="@+id/positiontxt" />

    <TextView
        android:id="@+id/Emailsignuptxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/emailsup"
        android:textColor="#020000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailsignuptxt"
        app:layout_constraintEnd_toEndOf="@+id/spdesgination"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spdesgination"
        app:layout_constraintTop_toBottomOf="@+id/spdesgination" />

    <EditText
        android:id="@+id/emailsignuptxt"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passtxtview"
        app:layout_constraintEnd_toEndOf="@+id/Emailsignuptxtview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Emailsignuptxtview"
        app:layout_constraintTop_toBottomOf="@+id/Emailsignuptxtview" />

    <TextView
        android:id="@+id/passtxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/passwordsup"
        android:textColor="#020000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passsignuptext"
        app:layout_constraintEnd_toEndOf="@+id/emailsignuptxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailsignuptxt"
        app:layout_constraintTop_toBottomOf="@+id/emailsignuptxt" />

    <EditText
        android:id="@+id/passsignuptext"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/sign_btn"
        app:layout_constraintEnd_toEndOf="@+id/passtxtview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passtxtview"
        app:layout_constraintTop_toBottomOf="@+id/passtxtview" />

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_upbtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />


</androidx.constraintlayout.widget.ConstraintLayout>
